; ModuleID = '/home/carl/AnghaBench/8cc/extr_parse.c_read_sizeof_operand_sub.c'
source_filename = "/home/carl/AnghaBench/8cc/extr_parse.c_read_sizeof_operand_sub.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* ()* @read_sizeof_operand_sub to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @read_sizeof_operand_sub() #0 {
  %1 = alloca i32*, align 8
  %2 = alloca i32*, align 8
  %3 = alloca i32*, align 8
  %4 = call i32* (...) @get()
  store i32* %4, i32** %2, align 8
  %5 = load i32*, i32** %2, align 8
  %6 = call i64 @is_keyword(i32* %5, i8 signext 40)
  %7 = icmp ne i64 %6, 0
  br i1 %7, label %8, label %16

8:                                                ; preds = %0
  %9 = call i32 (...) @peek()
  %10 = call i64 @is_type(i32 %9)
  %11 = icmp ne i64 %10, 0
  br i1 %11, label %12, label %16

12:                                               ; preds = %8
  %13 = call i32* (...) @read_cast_type()
  store i32* %13, i32** %3, align 8
  %14 = call i32 @expect(i8 signext 41)
  %15 = load i32*, i32** %3, align 8
  store i32* %15, i32** %1, align 8
  br label %22

16:                                               ; preds = %8, %0
  %17 = load i32*, i32** %2, align 8
  %18 = call i32 @unget_token(i32* %17)
  %19 = call %struct.TYPE_2__* (...) @read_unary_expr()
  %20 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %19, i32 0, i32 0
  %21 = load i32*, i32** %20, align 8
  store i32* %21, i32** %1, align 8
  br label %22

22:                                               ; preds = %16, %12
  %23 = load i32*, i32** %1, align 8
  ret i32* %23
}

declare dso_local i32* @get(...) #1

declare dso_local i64 @is_keyword(i32*, i8 signext) #1

declare dso_local i64 @is_type(i32) #1

declare dso_local i32 @peek(...) #1

declare dso_local i32* @read_cast_type(...) #1

declare dso_local i32 @expect(i8 signext) #1

declare dso_local i32 @unget_token(i32*) #1

declare dso_local %struct.TYPE_2__* @read_unary_expr(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
